--- a/src/Resources/CSS/global.scss
+++ b/src/Resources/CSS/global.scss
@@ -43,6 +43,9 @@ background-color: $hotRed;
 h1, h2, h3, h4,p {
     margin: 0;
 }
+%transition {
+    transition: all .3s linear;
+}
 @mixin h1 {
     font-family: $montserrat;
     font-size: 76px;
