--- a/src/Resources/CSS/globalFooter.scss
+++ b/src/Resources/CSS/globalFooter.scss
@@ -6,78 +6,184 @@
     position: relative;
     z-index: 0;
     border-top-right-radius: 6px;
+    &::after {
+        content: "";
+        width: 295px;
+        height: 301px;
+        background: url("../Images/footerBgLogo.png");
+        position: absolute;
+        right: 120px;
+        top: 120px;
+        z-index: -1;
+    }
+    &::before {
+        content:"";
+        width: 100%;
+        height: 100%;
+        background: url("../Images/footerPattern.png");
+        position: absolute;
+        top:0;
+        left:0;
+        right:0;
+        z-index: -1;
+        opacity: .5;
+        border-top-right-radius: 6px;
+    }
+    p {
+        @include paragraphFont;
+        color: $white;
+        padding-bottom: 8px;
+    }
+    h2 {
+        @include h1;
+        color: $white;
+    }
+    label {
+        display: none;
+    }
+    input[type = "email"]:focus,
+    input[type = "submit"]:focus {
+        box-shadow: none;
+    }
+    input[type = "email"] {
+        border: 2px solid $white;
+        width: 80%;
+        background-color: transparent;
+        border-radius: 4px;
+        padding: 10px 15px;
+        margin-top: 40px;
+        color: $white;
+    }
+    input::placeholder {
+        color: $white;
+        opacity: .7;
+    }
+    input[type = "submit"] {
+        border-radius: 100px;
+        margin-top: 20px;
+        padding: 14px 28px;
+        @include buttonText;
+        background-color: $lightWhite;
+        border: none;
+        color: $darkShadow;
+        @extend %transition;
+    }
+    input[type = "submit"]:hover {
+        background-color: $darkShadow;
+        color: $cutePink;
+    
+    }
+    span {
+        display: block;
+        @include paragraphFont;
+        color: $fireYellow;
+        padding: 5px 0 0;
+    }
 
 }
-.leftSide::after {
-    content: "";
-    width: 295px;
-    height: 301px;
-    background: url("../Images/footerBgLogo.png");
-    position: absolute;
-    right: 120px;
-    top: 120px;
-    z-index: -1;
-}
-.leftSide::before {
-    content:"";
-    width: 100%;
-    height: 100%;
-    background: url("../Images/footerPattern.png");
-    position: absolute;
-    top:0;
-    left:0;
-    right:0;
-    z-index: -1;
-    opacity: .5;
-    border-top-right-radius: 6px;
-}
-.leftSide p {
-    @include paragraphFont;
-    color: $white;
-    padding-bottom: 8px;
-}
-.leftSide h2 {
-    @include h1;
-    color: $white;
-}
-.leftSide label {
-    display: none;
-}
-.leftSide input[type = "email"]:focus,
-.leftSide input[type = "submit"]:focus {
-    box-shadow: none;
-}
-.leftSide input[type = "email"] {
-    border: 2px solid $white;
-    width: 80%;
-    background-color: transparent;
-    border-radius: 4px;
-    padding: 10px 15px;
-    margin-top: 40px;
-    color: $white;
-}
-.leftSide input::placeholder {
-    color: $white;
-    opacity: .7;
-}
-.leftSide input[type = "submit"] {
-    border-radius: 100px;
-    margin-top: 20px;
-    padding: 14px 28px;
-    @include buttonText;
-    background-color: $lightWhite;
-    border: none;
-    color: $darkShadow;
-    transition: all .3s linear;
-}
-.leftSide input[type = "submit"]:hover {
-    background-color: $darkShadow;
-    color: $cutePink;
 
+.rightSide {
+    background-color: $lightShadow;
+    margin-top: 90px;
+    padding: 150px 70px 150px 120px;
 }
-.leftSide span {
-    display: block;
-    @include paragraphFont;
+.rightSide h4 {
+    @include subtitle;
+    margin-bottom: 30px;
     color: $fireYellow;
-    padding: 5px 0 0;
+}
+.rightSide ul.nav li a {
+    padding: 0 0 10px 0;
+    @include paragraphFont;
+    color: $lightWhite;
+    @extend %transition;
+}
+.rightSide ul.nav li a:hover,
+.rightSide ul.nav li a.active,
+.rightSide .footerEmails a:hover {
+    color: $hotRed;
+}
+
+.rightSide .footerEmails a {
+    display: block;
+    margin-bottom: 10px;
+    @include paragraphFont {
+        font-size: 16px;
+    };
+    color: $lightWhite;
+    text-decoration: none;
+    @extend %transition;
+}
+.rightSide .footerSocialLink ul {
+    list-style-type: none;
+    margin:0;
+    padding:0;
+    display: flex;
+    margin-top: 25px;
+}
+.rightSide .footerSocialLink ul li svg {
+    fill: $hotRed;
+    width: auto;
+    height: 20px;
+    margin-right: 21px;
+    @extend %transition;
+}
+.rightSide .footerSocialLink ul li svg:hover {
+    fill: $fireYellow;
+}
+.rightSide .footerSocialLink ul li {
+    position: relative;
+}
+.rightSide .footerSocialLink ul li:after {
+    content:"";
+    width: 1px;
+    height: 20px;
+    background-color: $lightGray;
+    position: absolute;
+    top:2px;
+    right: 10px;
+
+}
+.rightSide .copyright {
+    @include paragraphFont {
+        font-size: 16px;
+        font-weight: 500;
+    };
+    color: $lightWhite;
+    margin-top: 40px;
+}
+
+@media only screen and (max-width: 1350px) {
+    .leftSide,
+    .rightSide {
+        padding: 80px 60px;
+    }
+}
+@media only screen and (max-width: 1200px) {
+    .leftSide,
+    .rightSide {
+        padding: 80px 60px;
+    }
+    .rightSide {
+        margin-top: 0;
+    }
+}
+@media only screen and (max-width: 1200px) {
+    .leftSide,
+    .rightSide {
+        padding: 40px 20px;
+    }
+    .leftSide input[type="email"] {
+        margin-top: 25px;
+    }
+    .leftSide::after {
+        width: 195px;
+        height: 201px;
+        top: 80px;
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+    .leftSide input[type="submit"] {
+        padding: 10px 22px;
+    }
 }
