--- a/src/Resources/CSS/landingPageBanner.scss
+++ b/src/Resources/CSS/landingPageBanner.scss
@@ -37,7 +37,8 @@
             }
         }
     }
-    @media only screen and (max-width: 992px) {
+    @media only screen and (max-width: 991px) {
+        padding: 80px 0;
         .featureItems {
             margin-top: 0;
             .features {
