--- a/src/Resources/CSS/global.scss
+++ b/src/Resources/CSS/global.scss
@@ -185,3 +185,20 @@ h1, h2, h3, h4,p {
         line-height: 22px;
     }
 }
+@mixin preHeader {
+    font-family: $poppins;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 400;
+    text-transform: capitalize;
+    @content;
+    @media only screen and (max-width: 1024px) {
+        font-size: 12px;
+        line-height: 18px;
+    }
+    @media only screen and (max-width: 767px) {
+        font-size: 12px;
+        line-height: 18px;
+    }
+}
+
